# SAR-with-Turtlebot3-ROS2-

./: .gitignore  CLEAN_STRUCTURE_SUMMARY.md  LICENSE  README.md  package.xml  setup.cfg  setup.py
TD3_trained/: training_log.csv
config/: multirobot_rviz.rviz  nav2_params_multi_robot.yaml  nav2_params_multirobot.yaml  nav2_params_real.yaml  nav2_params_robot1.yaml  nav2_params_robot2.yaml  slam_params_real.yaml  slam_params_robot2.yaml
docs/: FEATURES.md  PACKAGE_SUMMARY.md  QUICK_START.md  TD3_TRAINING_GUIDE.md
launch/multi_robot/: README.md  multi_robot_exploration.launch.py  multi_robot_real.launch.py
launch/single_robot/: autonomous_exploration.launch.py  full_autonomous_exploration.launch.py  real_robot_exploration.launch.py  sar_td3_exploration.launch.py  sar_world.launch.py
models/qr_cube/: model.config  model.sdf
models/qr_cube/materials/scripts/: qrcode.material
scripts/: launch_td3_exploration.sh  test_launch.py
src/SAR_TB3/: __init__.py  autonomous_explorer.py  frontier_detector.py  qr_detector.py  td3_agent.py  td3_waypoint_controller.py
src/SAR_TB3/drl_training/: __init__.py  autonomous_explorer.py  frontier_detector.py  laser_scan_adapter.py  map_fusion_coordinator.py  plotter.py  replay_buffer.py  reward.py  sar_environment.py  settings.py  td3_agent.py  td3_waypoint_controller.py  train_td3.py
worlds/: sar_room_world.sdf
